--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!--
+  <head>
+    <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -14,25 +14,192 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+    <base href="$FLUTTER_BASE_HREF" />
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="gmgn_app">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="GMGN App - 基于 Flutter 开发的加密货币交易和资产管理移动应用，1:1 还原 GMGN.ai 的设计稿"
+    />
+    <meta
+      name="keywords"
+      content="GMGN, 加密货币, 交易, 资产管理, Flutter, Web3, DeFi"
+    />
+    <meta name="author" content="Harry Chen" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="GMGN App - 加密货币交易平台" />
+    <meta
+      property="og:description"
+      content="基于 Flutter 开发的加密货币交易和资产管理移动应用"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://harry-chen-dev.github.io/gmgn_app/"
+    />
+    <meta
+      property="og:image"
+      content="https://harry-chen-dev.github.io/gmgn_app/icons/Icon-512.png"
+    />
 
-  <title>gmgn_app</title>
-  <link rel="manifest" href="manifest.json">
-</head>
-<body>
-  <script src="flutter_bootstrap.js" async></script>
-</body>
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GMGN App - 加密货币交易平台" />
+    <meta
+      name="twitter:description"
+      content="基于 Flutter 开发的加密货币交易和资产管理移动应用"
+    />
+    <meta
+      name="twitter:image"
+      content="https://harry-chen-dev.github.io/gmgn_app/icons/Icon-512.png"
+    />
+
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="GMGN App" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="icons/Icon-192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="icons/Icon-512.png"
+    />
+
+    <title>GMGN App - 加密货币交易平台</title>
+    <link rel="manifest" href="manifest.json" />
+    <style>
+      /* Loading Screen Styles */
+      .loading-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
+
+      .loading-logo {
+        width: 80px;
+        height: 80px;
+        background: #00c851;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 24px;
+        box-shadow: 0 8px 32px rgba(0, 200, 81, 0.3);
+      }
+
+      .loading-logo-text {
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+      }
+
+      .loading-title {
+        color: white;
+        font-size: 28px;
+        font-weight: 600;
+        margin-bottom: 8px;
+        text-align: center;
+      }
+
+      .loading-subtitle {
+        color: rgba(255, 255, 255, 0.8);
+        font-size: 16px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+
+      .loading-spinner {
+        width: 40px;
+        height: 40px;
+        border: 4px solid rgba(255, 255, 255, 0.3);
+        border-top: 4px solid white;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      .loading-tips {
+        color: rgba(255, 255, 255, 0.7);
+        font-size: 14px;
+        margin-top: 24px;
+        text-align: center;
+        max-width: 300px;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Loading Screen -->
+    <div id="loading" class="loading-container">
+      <div class="loading-logo">
+        <div class="loading-logo-text">G</div>
+      </div>
+      <div class="loading-title">GMGN App</div>
+      <div class="loading-subtitle">加密货币交易平台</div>
+      <div class="loading-spinner"></div>
+      <div class="loading-tips">
+        正在加载应用，请稍候...<br />
+        建议使用 Chrome 浏览器获得最佳体验
+      </div>
+    </div>
+
+    <script>
+      // Hide loading screen when Flutter app is ready
+      window.addEventListener("flutter-first-frame", function () {
+        const loading = document.getElementById("loading");
+        if (loading) {
+          loading.style.opacity = "0";
+          loading.style.transition = "opacity 0.5s ease-out";
+          setTimeout(() => {
+            loading.style.display = "none";
+          }, 500);
+        }
+      });
+
+      // Fallback: Hide loading screen after 10 seconds
+      setTimeout(() => {
+        const loading = document.getElementById("loading");
+        if (loading && loading.style.display !== "none") {
+          loading.style.opacity = "0";
+          loading.style.transition = "opacity 0.5s ease-out";
+          setTimeout(() => {
+            loading.style.display = "none";
+          }, 500);
+        }
+      }, 10000);
+    </script>
+
+    <script src="flutter_bootstrap.js" async></script>
+  </body>
 </html>
