--- a/web/index.html
+++ b/web/index.html
@@ -200,6 +200,22 @@
       }, 10000);
     </script>
 
-    <script src="flutter_bootstrap.js" async></script>
+    <!-- Flutter Web Engine -->
+    <script>
+      window.addEventListener("load", function (ev) {
+        // Download main.dart.js
+        _flutter.loader.loadEntrypoint({
+          serviceWorker: {
+            serviceWorkerVersion: null,
+          },
+          onEntrypointLoaded: function (engineInitializer) {
+            engineInitializer.initializeEngine().then(function (appRunner) {
+              appRunner.runApp();
+            });
+          },
+        });
+      });
+    </script>
+    <script src="flutter.js" defer></script>
   </body>
 </html>
